Prevent horizontal scrollbar

--- a/dockerUI/app/styles/main.css
+++ b/dockerUI/app/styles/main.css
@@ -93,3 +93,8 @@ body {
 .color-green {
   color: green;
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
